force-app/main/default/objects/Project_Unit__c/fields/Stack__c.field-meta.xml
<CustomField>
    <fullName>Stack__c</fullName>
    <label>Stilt (Earmarked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>