force-app/main/default/objects/Project_Unit__c/fields/Store_room__c.field-meta.xml
<CustomField>
    <fullName>Store_room__c</fullName>
    <label>Store room</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>