force-app/main/default/objects/Project_Unit__c/fields/Tandem_Open_Earmarked__c.field-meta.xml
<CustomField>
    <fullName>Tandem_Open_Earmarked__c</fullName>
    <label>Tandem Open (Earmarked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>