force-app/main/default/objects/Project_Unit__c/fields/Tax_Rate_Basic__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Basic__c</fullName>
    <label>Tax Rate Basic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GST 8%</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>GST 18%</fullName>
            </value>
            <value>
                <fullName>GST 0%</fullName>
            </value>
            <value>
                <fullName>GST 1%</fullName>
            </value>
            <value>
                <fullName>GST 5%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>