force-app/main/default/objects/Project_Unit__c/fields/Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>Token_Amount__c</fullName>
    <label>Token Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>