force-app/main/default/objects/Project_Unit__c/fields/Total_RERA_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_RERA_Carpet_Area__c</fullName>
    <label>Total RERA Carpet Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>