force-app/main/default/objects/Project_Unit__c/fields/TowerName__c.field-meta.xml
<CustomField>
    <fullName>TowerName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TowerName</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Project Units</relationshipLabel>
    <relationshipName>Project_Units</relationshipName>
    <type>Lookup</type>
</CustomField>