force-app/main/default/objects/Project_Unit__c/fields/Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Type_Label__c</fullName>
    <label>Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>