force-app/main/default/objects/Project_Unit__c/fields/Unit_Floor_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Floor_Status__c</fullName>
    <label>Unit Floor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved Floor</fullName>
            </value>
            <value>
                <fullName>Un-Approved Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>