force-app/main/default/objects/Project_Unit__c/fields/Unit_Morgage_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Morgage_Status__c</fullName>
    <label>Unit Morgage Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Un-mortgaged</fullName>
            </value>
            <value>
                <fullName>Mortgaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>