force-app/main/default/objects/Project_Unit__c/fields/Unit_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_SAP_Code__c</fullName>
    <label>Unit SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>