force-app/main/default/objects/Project_Unit__c/fields/UnitNo__c.field-meta.xml
<CustomField>
    <fullName>UnitNo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>UnitNo</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>