force-app/main/default/objects/Project_Unit__c/fields/Utility_Area__c.field-meta.xml
<CustomField>
    <fullName>Utility_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Utility Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>