force-app/main/default/objects/Project_Unit__c/fields/Vertical_Credits__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Credits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertical Credits</label>
    <type>Checkbox</type>
</CustomField>