force-app/main/default/objects/Project_Unit__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <type>TextArea</type>
</CustomField>