force-app/main/default/objects/Project_Unit__c/validationRules/Booking_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Date_Mandatory</fullName>
    <active>true</active>
    <description>If Project Unit is Booked, Booking Date is Mandatory.</description>
    <errorConditionFormula>AND(ISPICKVAL( RW_Unit_Status__c , &apos;Booked&apos;), ISBLANK( RW_Booking_Date__c ) )</errorConditionFormula>
    <errorDisplayField>RW_Booking_Date__c</errorDisplayField>
    <errorMessage>Please fill the Booking Date.</errorMessage>
</ValidationRule>