force-app/main/default/objects/Project_Unit__c/validationRules/Refuge_Units.validationRule-meta.xml
<ValidationRule>
    <fullName>Refuge_Units</fullName>
    <active>true</active>
    <description>Project Unit status can not be updated to Refuge Units, if any customer is tagged.</description>
    <errorConditionFormula>AND( ISPICKVAL( RW_Unit_Status__c , &apos;Refuge Units&apos;) , NOT(ISBLANK( RW_Customer__c )))</errorConditionFormula>
    <errorMessage>Project Unit status can not be updated to Refuge Units, if any customer is tagged.</errorMessage>
</ValidationRule>