force-app/main/default/objects/Project_Unit__c/validationRules/RM_Change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>RM_Change_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.Username = &apos;devendra.palav@runwal.com&apos;,
NOT(ISPICKVAL(RW_Unit_Status__c , &apos;Booked&apos;)),
ISCHANGED( Relationship_Manager__c )
)</errorConditionFormula>
    <errorMessage>You are not allowed to make changes other than booked units. Please contact system admin.</errorMessage>
</ValidationRule>