force-app/main/default/objects/Project_Unit__c/validationRules/Validate_Reference_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Reference_Number</fullName>
    <active>false</active>
    <description>Please fill up the Reference Number on the opportunity to proceed.</description>
    <errorConditionFormula>AND(
ISPICKVAL( RW_Unit_Status__c , &apos;Booked&apos;), 
OR(ISPICKVAL(RW_Customer__r.LeadSource, &apos;Loyalty&apos;), 
ISPICKVAL(RW_Customer__r.RW_Reference_Source__c, &apos;Existing Customer Reference&apos;))
)</errorConditionFormula>
    <errorMessage>Please fill up the Reference Number on the opportunity to proceed.</errorMessage>
</ValidationRule>