force-app/main/default/objects/Project_Unit__c/listViews/Bliss_without_Opp.listView-meta.xml
<ListView>
    <fullName>Bliss_without_Opp</fullName>
    <columns>RW_Project__c</columns>
    <columns>NAME</columns>
    <columns>RW_Unit_Status__c</columns>
    <columns>RW_Param1__c</columns>
    <columns>RW_Param2__c</columns>
    <columns>RW_Param3__c</columns>
    <columns>RW_Param4__c</columns>
    <columns>RW_Param5__c</columns>
    <columns>RW_Seventh_Day__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Bliss</value>
    </filters>
    <filters>
        <field>RW_Customer__c</field>
        <operation>equals</operation>
    </filters>
    <label>Bliss without Opp</label>
</ListView>