force-app/main/default/objects/Project_Unit__c/listViews/Runwal_Forests_Units.listView-meta.xml
<ListView>
    <fullName>Runwal_Forests_Units</fullName>
    <columns>OBJECT_ID</columns>
    <columns>RW_Project__c</columns>
    <columns>NAME</columns>
    <columns>RW_Param1__c</columns>
    <columns>RW_Param2__c</columns>
    <columns>RW_Param3__c</columns>
    <columns>RW_Customer__c</columns>
    <columns>RW_Param4__c</columns>
    <columns>Carpet_Area__c</columns>
    <columns>RW_Booking_Date__c</columns>
    <columns>RW_Param5__c</columns>
    <columns>RW_Floor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Runwal Forests - Units</label>
</ListView>